Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp
@@ -43,6 +43,7 @@ static void webkitMediaStreamSrcPushVideoSample(WebKitMediaStreamSrc*, GstSample
 static void webkitMediaStreamSrcPushAudioSample(WebKitMediaStreamSrc*, const GRefPtr<GstSample>&);
 static void webkitMediaStreamSrcTrackEnded(WebKitMediaStreamSrc*, MediaStreamTrackPrivate&);
 static void webkitMediaStreamSrcRemoveTrackByType(WebKitMediaStreamSrc*, RealtimeMediaSource::Type);
+static void webkitMediaStreamSrcRemoveTrackObserver(WebKitMediaStreamSrc*, MediaStreamTrackPrivate&);
 
 static GstStaticPadTemplate videoSrcTemplate = GST_STATIC_PAD_TEMPLATE("video_src", GST_PAD_SRC, GST_PAD_SOMETIMES,
     GST_STATIC_CAPS("video/x-raw;video/x-h264;video/x-vp8"));
@@ -164,8 +165,11 @@ public:
 
     void didRemoveTrack(MediaStreamTrackPrivate& track) final
     {
-        if (m_src)
-            webkitMediaStreamSrcRemoveTrackByType(WEBKIT_MEDIA_STREAM_SRC(m_src), track.type());
+        if (!m_src)
+            return;
+
+        webkitMediaStreamSrcRemoveTrackObserver(WEBKIT_MEDIA_STREAM_SRC(m_src), track);
+        webkitMediaStreamSrcRemoveTrackByType(WEBKIT_MEDIA_STREAM_SRC(m_src), track.type());
     }
 
 private:
@@ -349,21 +353,31 @@ static void webkitMediaStreamSrcConstructed(GObject* object)
     ASSERT(g_object_is_floating(self));
 }
 
+static void webkitMediaStreamSrcRemoveTrackObserver(WebKitMediaStreamSrc* self, MediaStreamTrackPrivate& track)
+{
+    auto* priv = self->priv;
+    switch (track.type()) {
+    case RealtimeMediaSource::Type::Video:
+        track.source().removeVideoSampleObserver(*priv->mediaStreamTrackObserver);
+        break;
+    case RealtimeMediaSource::Type::Audio:
+        track.source().removeAudioSampleObserver(*priv->mediaStreamTrackObserver);
+        break;
+    case RealtimeMediaSource::Type::None:
+        ASSERT_NOT_REACHED();
+    }
+    track.removeObserver(*priv->mediaStreamTrackObserver);
+}
+
 static void stopObservingTracks(WebKitMediaStreamSrc* self)
 {
     GST_OBJECT_LOCK(self);
     auto* priv = self->priv;
     if (priv->stream) {
-        for (auto& track : priv->stream->tracks()) {
-            track->source().removeAudioSampleObserver(*priv->mediaStreamTrackObserver);
-            track->source().removeVideoSampleObserver(*priv->mediaStreamTrackObserver);
-            track->removeObserver(*priv->mediaStreamTrackObserver);
-        }
-    } else if (priv->track) {
-        priv->track->source().removeAudioSampleObserver(*priv->mediaStreamTrackObserver);
-        priv->track->source().removeVideoSampleObserver(*priv->mediaStreamTrackObserver);
-        priv->track->removeObserver(*priv->mediaStreamTrackObserver);
-    }
+        for (auto& track : priv->stream->tracks())
+            webkitMediaStreamSrcRemoveTrackObserver(self, *track);
+    } else if (priv->track)
+        webkitMediaStreamSrcRemoveTrackObserver(self, *priv->track);
     GST_OBJECT_UNLOCK(self);
 }
 
@@ -512,14 +526,13 @@ static void webkitMediaStreamSrcSetupSrc(WebKitMediaStreamSrc* self, MediaStream
     }
 
     auto* priv = self->priv;
-    track->addObserver(*priv->mediaStreamTrackObserver.get());
-    auto& source = track->source();
-    switch (source.type()) {
+    track->addObserver(*priv->mediaStreamTrackObserver);
+    switch (track->type()) {
     case RealtimeMediaSource::Type::Audio:
-        source.addAudioSampleObserver(*priv->mediaStreamTrackObserver);
+        track->source().addAudioSampleObserver(*priv->mediaStreamTrackObserver);
         break;
     case RealtimeMediaSource::Type::Video:
-        source.addVideoSampleObserver(*priv->mediaStreamTrackObserver);
+        track->source().addVideoSampleObserver(*priv->mediaStreamTrackObserver);
         break;
     case RealtimeMediaSource::Type::None:
         ASSERT_NOT_REACHED();
